feat: show product by id
